--- a/trunk/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
+++ b/trunk/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 17:48:30 $
+# $Revision: 1.2 $  $Date: 2004-03-05 18:14:26 $
 #
 
 
@@ -19,9 +19,6 @@ MainDialog.title                                         = Choose a Bean
 MainDialog.message                                       = Choose a JavaBean
 MainDialog.statusArea.initialText                        = Please Select
 SelectionAreaHelper.GroupTitle                           = Select class
-SelectionAreaHelper.SelectType.ALL                       = All Types
-SelectionAreaHelper.SelectType.SWING                     = Swing
-SelectionAreaHelper.SelectType.AWT                       = AWT
 SelectionAreaHelper.LogMessage.SelectedClassCreation     = Trying to instantiate:
 SelectionAreaHelper.StatusMessage.ErrorInstantiating     = Cannot Instantiate
 SerializedFileHelper.GroupTitle                          = Select file
@@ -38,3 +35,6 @@ ChooseBeanDialog.Group.Properties.Title                  = Properties
 ChooseBeanDialog.Group.Properties.VariableName.text      = Bean variable name
 ChooseBeanDialog.Message.AbstractType                    = Abstract type
 ChooseBeanDialog.Message.NonStaticType                   = Non static type
+SwingChooseBeanContributor.Name                          = Swing
+AllTypesChooseBeanContributor.Name                       = All Types
+AWTChooseBeanContributor.Name                            = AWT
