GreenThread property editor + SWT on ChooseBean

--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
@@ -10,13 +10,13 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties,v $
-# $Revision: 1.2 $  $Date: 2004-03-05 18:14:26 $
+# $Revision: 1.3 $  $Date: 2004-03-17 12:23:39 $
 #
 
 
 #org.eclipse.ve.internal.java.choosebean/messages.properties
 MainDialog.title                                         = Choose a Bean
-MainDialog.message                                       = Choose a JavaBean
+MainDialog.message                                       = Choose a JavaBean (? = any character, * = any string)
 MainDialog.statusArea.initialText                        = Please Select
 SelectionAreaHelper.GroupTitle                           = Select class
 SelectionAreaHelper.LogMessage.SelectedClassCreation     = Trying to instantiate:
