--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 18:29:32 $
+# $Revision: 1.2 $  $Date: 2004-03-26 16:35:58 $
 #
 
 
@@ -73,3 +73,49 @@ ComponentProxyAdapter.Out_of_memory              = Component is too large. Ran o
 ComponentProxyAdapter.Image_collection_exception = Exception occurred of type {0}
 ComponentProxyAdapter.Image_collection_failed    = Get of the picture failed: \"{0}"
 
+# GridBagConstraints Action Properties
+# Note to translators.  Do not translate any of the entries that have 
+# .gif at the end.  These are file names and not user visible strings
+#
+AnchorAction.north.label                         = Anchor north
+AnchorAction.north.tooltip                       = Anchor north
+AnchorAction.north.image                         = cmpN_pal.gif
+AnchorAction.south.label                         = Anchor south
+AnchorAction.south.tooltip                       = Anchor south
+AnchorAction.south.image                         = cmpS_pal.gif
+AnchorAction.east.label                          = Anchor east
+AnchorAction.east.tooltip                        = Anchor east
+AnchorAction.east.image                          = cmpE_pal.gif
+AnchorAction.west.label                          = Anchor west
+AnchorAction.west.tooltip                        = Anchor west
+AnchorAction.west.image                          = cmpW_pal.gif
+AnchorAction.center.label                        = Anchor center
+AnchorAction.center.tooltip                      = Anchor center
+AnchorAction.center.image                        = cmpC_pal.gif
+AnchorAction.northwest.label                     = Anchor northwest
+AnchorAction.northwest.tooltip                   = Anchor northwest
+AnchorAction.northwest.image                     = cmpNW_pal.gif
+AnchorAction.southwest.label                     = Anchor southwest
+AnchorAction.southwest.tooltip                   = Anchor southwest
+AnchorAction.southwest.image                     = cmpSW_pal.gif
+AnchorAction.northeast.label                     = Anchor northeast
+AnchorAction.northeast.tooltip                   = Anchor northeast
+AnchorAction.northeast.image                     = cmpNE_pal.gif
+AnchorAction.southeast.label                     = Anchor southeast
+AnchorAction.southeast.tooltip                   = Anchor southeast
+AnchorAction.southeast.image                     = cmpSE_pal.gif
+FillAction.horizontal.label                      = horizontal
+FillAction.horizontal.tooltip                    = Fill horizontal
+FillAction.horizontal.image                      = horFill_pal.gif
+FillAction.vertical.label                        = vertical
+FillAction.vertical.tooltip                      = Fill vertical
+FillAction.vertical.image                        = verFill_pal.gif
+GridBagConstraintsTabPage.Anchor                 = Anchor
+GridBagConstraintsTabPage.Fill                   = Fill
+GridBagConstraintsTabPage.Gridbag                = Gridbag
+GridBagConstraintsTabPage.ToolTipText            = Set GridBagConstraints anchor, fill, and insets values
+GridBagConstraintsTabPage.Insets                 = Insets
+GridBagConstraintsTabPage.InsetsGroup.Top        = Top:
+GridBagConstraintsTabPage.InsetsGroup.Left       = Left:
+GridBagConstraintsTabPage.InsetsGroup.Bottom     = Bottom:
+GridBagConstraintsTabPage.InsetsGroup.Right      = Right:
