--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 17:37:06 $
+# $Revision: 1.2 $  $Date: 2004-04-05 03:38:43 $
 #
 
 
@@ -148,3 +148,4 @@ SAVE_FAIL_ERROR_                                     = IWAV0029E Failure saving 
 SAVING_AS_UI_                                        = Saving As...
 ERROR_TITLE_UI_                                      = Error
 
+NameInCompositionPropertyDescriptor.NameInComposition.InvalidName_INFO_=Invalid variable name
