--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties,v $
-# $Revision: 1.2 $  $Date: 2004-03-26 23:08:01 $
+# $Revision: 1.3 $  $Date: 2004-04-05 22:16:36 $
 #
 
 
@@ -59,3 +59,5 @@ JavaVisualEditor.ErrorDesc                          = Error trying to set new fi
 JavaVisualEditor.NoEvents                           = No Events
 JavaVisualEditor.ShowEvents                         = Show Events
 JavaVisualEditor.ExpertEvents                       = Expert Events
+FieldNameValidator.InvalidVariableName_INFO_=Invalid variable name
+FieldNameValidator.VariableNameExists_INFO_=Similar variable name exists
