--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 17:48:30 $
+# $Revision: 1.2 $  $Date: 2004-04-23 16:28:10 $
 #
 
 
@@ -59,6 +59,8 @@ Labelprovider.Width                                                             
 Labelprovider.Height                                                              = height
 DefaultLabelProvider.Label.DottedVersion                                          = {0}...
 DefaultLabelProvider.Label.FullVersion                                            = {0}-\"{1}"
+LabelPolicy.text.Label                                                            = Label
+LabelPolicy.text.JLabel                                                           = JLabel
 
 # The following is displayed in the status line when an exception is thrown with the live beans.
 # {0} is the class name of the exception (e.g. java.lang.NullPointerException)
