60013 - Changing SWT's label creation policy so that it doesn't query for an existing value

--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,9 +10,10 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2004-03-17 12:23:26 $
+# $Revision: 1.2 $  $Date: 2004-04-27 16:21:19 $
 #
 
 
 #org.eclipse.ve.internal.swt/messages.properties
 SWTChooseBeanContributor.Name                            = SWT
+LabelPolicy.text.Label                                   = Label
