Adding feedback and customization pages for GridLayout

--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,10 +10,87 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.2 $  $Date: 2004-04-27 16:21:19 $
+# $Revision: 1.3 $  $Date: 2004-05-07 12:46:42 $
 #
 
 
 #org.eclipse.ve.internal.swt/messages.properties
 SWTChooseBeanContributor.Name                            = SWT
 LabelPolicy.text.Label                                   = Label
+
+# GridData Action Properties
+# Note to translators.  Do not translate any of the entries that have 
+# .gif at the end.  These are file names and not user visible strings
+#
+
+# North West
+AlignmentAction.beginning.beginning.label          = H: begining, V: beginning
+AlignmentAction.beginning.beginning.tooltip        = H: begining, V: beginning
+AlignmentAction.beginning.beginning.image          = cmpNW_pal.gif
+# North
+AlignmentAction.center.beginning.label             = H: center, V: beginning
+AlignmentAction.center.beginning.tooltip           = H: center, V: beginning
+AlignmentAction.center.beginning.image             = cmpN_pal.gif
+# North East
+AlignmentAction.end.beginning.label                = H: end, V: beginning
+AlignmentAction.end.beginning.tooltip              = H: end, V: beginning
+AlignmentAction.end.beginning.image                = cmpNE_pal.gif
+# West
+AlignmentAction.beginning.center.label             = H: beginning, V: center
+AlignmentAction.beginning.center.tooltip           = H: beginning, V: center
+AlignmentAction.beginning.center.image             = cmpW_pal.gif
+# Center
+AlignmentAction.center.center.label                = H: center, V: center
+AlignmentAction.center.center.tooltip              = H: center, V: center
+AlignmentAction.center.center.image                = cmpC_pal.gif
+# East
+AlignmentAction.end.center.label                   = H: end, V: center
+AlignmentAction.end.center.tooltip                 = H: end, V: center
+AlignmentAction.end.center.image                   = cmpE_pal.gif
+# South West
+AlignmentAction.beginning.end.label                = H: beginning, V: end
+AlignmentAction.beginning.end.tooltip              = H: beginning, V: end
+AlignmentAction.beginning.end.image                = cmpSW_pal.gif
+# South
+AlignmentAction.center.end.label                   = H: center, V: end
+AlignmentAction.center.end.tooltip                 = H: center, V: end
+AlignmentAction.center.end.image                   = cmpS_pal.gif
+# South East
+AlignmentAction.end.end.label                      = H: end, V: end
+AlignmentAction.end.end.tooltip                    = H: end, V: end
+AlignmentAction.end.end.image                      = cmpSE_pal.gif
+
+FillAction.horizontal.label                      = horizontal
+FillAction.horizontal.tooltip                    = Fill horizontal
+FillAction.horizontal.image                      = horFill_pal.gif
+FillAction.vertical.label                        = vertical
+FillAction.vertical.tooltip                      = Fill vertical
+FillAction.vertical.image                        = verFill_pal.gif
+
+GrabAction.horizontal.label                      = horizontal
+GrabAction.horizontal.tooltip                    = Grab excess horizontal space
+GrabAction.horizontal.image                      = horFill_pal.gif
+GrabAction.vertical.label                        = vertical
+GrabAction.vertical.tooltip                      = Grab excess vertical space
+GrabAction.vertical.image                        = verFill_pal.gif
+
+GridDataTabPage.Alignment              = Alignment
+GridDataTabPage.Fill                   = Fill
+GridDataTabPage.Grab                   = Grab Excess Space
+GridDataTabPage.Span                   = Span
+GridDataTabPage.SpanHorizontal         = Horizontal:
+GridDataTabPage.SpanVertical           = Vertical:
+GridDataTabPage.Grid                   = Grid
+GridDataTabPage.SpanHorizontal         = Horizontal: 
+GridDataTabPage.ToolTipText            = Set GridData alignment, fill, and insets values
+
+
+CustomizeLayoutAction.gridLayoutTitle=GridLayout Settings
+CustomizeLayoutAction.columnsTitle=Grid Columns
+CustomizeLayoutAction.numColumns=Number of columns: 
+CustomizeLayoutAction.columnsEqualWidth=Make columns equal width
+CustomizeLayoutAction.spacingTitle=Spacing
+CustomizeLayoutAction.horizontalSpacing=Horizontal spacing: 
+CustomizeLayoutAction.verticalSpacing=Vertical spacing: 
+CustomizeLayoutAction.marginHeight=Margin height: 
+CustomizeLayoutAction.marginWidth=Margin width: 
