--- a/trunk/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
+++ b/trunk/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
@@ -10,14 +10,21 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-04-05 14:36:44 $
+# $Revision: 1.4 $  $Date: 2004-05-10 18:37:20 $
 #
 
 
-AlignmentWindow.title                                = Alignment
-AlignmentWindowAction.label                          = Alignment Window
-AlignmentWindowAction.tooltip.show                   = Show alignment window
-AlignmentWindowAction.tooltip.hide                   = Hide alignment window
+CustomizeLayoutWindow.title                          = Customize Layout
+CustomizeLayoutWindow.layoutTabTitle                 = Layout
+CustomizeLayoutWindow.layoutTabToolTip               = Customize layout options
+CustomizeLayoutWindow.componentTabTitle              = Component
+CustomizeLayoutWindow.componentTabToolTip            = Customize component options
+CustomizeLayoutWindow.noLayoutText                   = No layout options to customize on the current selection.
+CustomizeLayoutWindow.noComponentText                = No component options to customize on the current selection.
+
+CustomizeLayoutWindowAction.label                    = Customize Layout Window
+CustomizeLayoutWindowAction.tooltip.show             = Show customize layout window
+CustomizeLayoutWindowAction.tooltip.hide             = Hide customize layout window
 
 XYAlignmentTab.label                                 = X/Y
 XYAlignmentTab.tooltip                               = X/Y alignment actions
