--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-04-23 16:28:12 $
+# $Revision: 1.4 $  $Date: 2004-05-10 18:37:38 $
 #
 
 
@@ -108,12 +108,12 @@ FillAction.horizontal.image                      = horFill_pal.gif
 FillAction.vertical.label                        = vertical
 FillAction.vertical.tooltip                      = Fill vertical
 FillAction.vertical.image                        = verFill_pal.gif
-GridBagConstraintsTabPage.Anchor                 = Anchor
-GridBagConstraintsTabPage.Fill                   = Fill
-GridBagConstraintsTabPage.Gridbag                = Gridbag
-GridBagConstraintsTabPage.ToolTipText            = Set GridBagConstraints anchor, fill, and insets values
-GridBagConstraintsTabPage.Insets                 = Insets
-GridBagConstraintsTabPage.InsetsGroup.Top        = Top:
-GridBagConstraintsTabPage.InsetsGroup.Left       = Left:
-GridBagConstraintsTabPage.InsetsGroup.Bottom     = Bottom:
-GridBagConstraintsTabPage.InsetsGroup.Right      = Right:
+GridBagComponentPage.Anchor                      = Anchor
+GridBagComponentPage.Fill                        = Fill
+GridBagComponentPage.Gridbag                     = Gridbag
+GridBagComponentPage.ToolTipText                 = Set GridBagConstraints anchor, fill, and insets values
+GridBagComponentPage.Insets                      = Insets
+GridBagComponentPage.InsetsGroup.Top             = Top:
+GridBagComponentPage.InsetsGroup.Left            = Left:
+GridBagComponentPage.InsetsGroup.Bottom          = Bottom:
+GridBagComponentPage.InsetsGroup.Right           = Right:
