--- a/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-05-07 12:46:42 $
+# $Revision: 1.4 $  $Date: 2004-05-10 18:37:31 $
 #
 
 
@@ -74,16 +74,25 @@ GrabAction.vertical.label                        = vertical
 GrabAction.vertical.tooltip                      = Grab excess vertical space
 GrabAction.vertical.image                        = verFill_pal.gif
 
-GridDataTabPage.Alignment              = Alignment
-GridDataTabPage.Fill                   = Fill
-GridDataTabPage.Grab                   = Grab Excess Space
-GridDataTabPage.Span                   = Span
-GridDataTabPage.SpanHorizontal         = Horizontal:
-GridDataTabPage.SpanVertical           = Vertical:
-GridDataTabPage.Grid                   = Grid
-GridDataTabPage.SpanHorizontal         = Horizontal: 
-GridDataTabPage.ToolTipText            = Set GridData alignment, fill, and insets values
+GridLayoutComponentPage.Alignment              = Alignment
+GridLayoutComponentPage.Fill                   = Fill
+GridLayoutComponentPage.Grab                   = Grab Excess Space
+GridLayoutComponentPage.Span                   = Span
+GridLayoutComponentPage.SpanHorizontal         = Horizontal:
+GridLayoutComponentPage.SpanVertical           = Vertical:
+GridLayoutComponentPage.Grid                   = Grid
+GridLayoutComponentPage.SpanHorizontal         = Horizontal: 
+GridLayoutComponentPage.ToolTipText            = Set GridData alignment, fill, and insets values
 
+GridLayoutLayoutPage.gridLayoutTitle=GridLayout Settings
+GridLayoutLayoutPage.columnsTitle=Grid Columns
+GridLayoutLayoutPage.numColumns=Number of columns: 
+GridLayoutLayoutPage.columnsEqualWidth=Make columns equal width
+GridLayoutLayoutPage.spacingTitle=Spacing
+GridLayoutLayoutPage.horizontalSpacing=Horizontal spacing: 
+GridLayoutLayoutPage.verticalSpacing=Vertical spacing: 
+GridLayoutLayoutPage.marginHeight=Margin height: 
+GridLayoutLayoutPage.marginWidth=Margin width: 
 
 CustomizeLayoutAction.gridLayoutTitle=GridLayout Settings
 CustomizeLayoutAction.columnsTitle=Grid Columns
