--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.jfc/jfc/org/eclipse/ve/internal/jfc/core/messages.properties,v $
-# $Revision: 1.4 $  $Date: 2004-05-10 18:37:38 $
+# $Revision: 1.5 $  $Date: 2004-05-11 16:14:07 $
 #
 
 
@@ -70,6 +70,13 @@ ComponentProxyAdapter.Picture_too_large          = Component is too large for a 
 ComponentProxyAdapter.Out_of_memory              = Component is too large. Ran out of memory retrieving the picture.
 ComponentProxyAdapter.Image_collection_exception = Exception occurred of type {0}
 ComponentProxyAdapter.Image_collection_failed    = Get of the picture failed: \"{0}"
+
+GridLayoutLayoutPage.gridDimensionsTitle         = Grid Dimensions
+GridLayoutLayoutPage.columns                     = Number of columns:
+GridLayoutLayoutPage.rows                        = Number of rows:
+GridLayoutLayoutPage.spacingTitle                = Grid Spacing
+GridLayoutLayoutPage.horizontalGap               = Horizontal gap:
+GridLayoutLayoutPage.verticalGap                 = Vertical gap:
 
 # GridBagConstraints Action Properties
 # Note to translators.  Do not translate any of the entries that have 
