--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/launcher/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/launcher/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/launcher/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 17:48:30 $
+# $Revision: 1.2 $  $Date: 2004-05-12 15:58:26 $
 #
 
 
@@ -35,6 +35,7 @@ BeanTab.locale.label                                = Locale:
 BeanTab.default.label                               = Use default
 BeanTab.localesuggest.label                         = e,g. en_US or zh_CN
 BeanTab.size.label                                  = For Visual Java Beans (including Applets):
+BeanTab.swtsize.label                               = For Shell Window:
 BeanTab.pack.label                                  = Pack
 BeanTab.fixed.label                                 = or use fixed width
 BeanTab.height.label                                = \ and height
@@ -50,7 +51,12 @@ BeanTab.widthtoosmall.msg_WARN_                     = IWAV0112W Width must be > 
 BeanTab.badwidth.msg_ERROR_                         = IWAV0113E Width must be an integer
 BeanTab.heighttoosmall.msg_WARN_                    = IWAV0114W Height must be > 0
 BeanTab.badheight.msg_ERROR_                        = IWAV0115E Height must be an integer
-BeanTab.title                                       = &JavaBean
+BeanTab.title                                       = &Java Bean
+BeanTab.swingtab.text                               = Swing / AWT
+BeanTab.swingtab.tooltip                            = Configure launch options specific to Swing / AWT beans
+BeanTab.swttab.text                                 = SWT
+BeanTab.swttab.tooltip                              = Configure launch options spefific to SWT components
+BeanTab.swttab.nooptions                            = No SWT specific options to configure.
 Launcher.jreerror.msg_ERROR_                        = IWAV0046E Internal error: JRE {0} does not specify a VM Runner
 LaunchConfigurationDelegate.Msg.Launching           = Launching...
 ErrorDialog.Title                                   = Error
