--- a/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/launcher/messages.properties
+++ b/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/launcher/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/vce/launcher/messages.properties,v $
-# $Revision: 1.2 $  $Date: 2004-05-12 15:58:26 $
+# $Revision: 1.3 $  $Date: 2004-05-18 14:30:11 $
 #
 
 
@@ -55,7 +55,7 @@ BeanTab.title                                       = &Java Bean
 BeanTab.swingtab.text                               = Swing / AWT
 BeanTab.swingtab.tooltip                            = Configure launch options specific to Swing / AWT beans
 BeanTab.swttab.text                                 = SWT
-BeanTab.swttab.tooltip                              = Configure launch options spefific to SWT components
+BeanTab.swttab.tooltip                              = Configure launch options specific to SWT components
 BeanTab.swttab.nooptions                            = No SWT specific options to configure.
 Launcher.jreerror.msg_ERROR_                        = IWAV0046E Internal error: JRE {0} does not specify a VM Runner
 LaunchConfigurationDelegate.Msg.Launching           = Launching...
