--- a/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/trunk/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.4 $  $Date: 2004-05-10 18:37:31 $
+# $Revision: 1.5 $  $Date: 2004-05-18 14:44:12 $
 #
 
 
@@ -103,3 +103,6 @@ CustomizeLayoutAction.horizontalSpacing=Horizontal spacing:
 CustomizeLayoutAction.verticalSpacing=Vertical spacing: 
 CustomizeLayoutAction.marginHeight=Margin height: 
 CustomizeLayoutAction.marginWidth=Margin width: 
+SWTContainerWizardPage.wizardTitle=SWT Container Options
+SWTContainerWizardPage.wizardMessage=Select additional configuration options.
+SWTContainerWizardPage.includeJFaceCheck=Include support for JFace library
