Adding RowLayout layout config page

--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.swt/ve_swt/org/eclipse/ve/internal/swt/messages.properties,v $
-# $Revision: 1.6 $  $Date: 2004-05-18 14:47:26 $
+# $Revision: 1.7 $  $Date: 2004-05-18 16:49:31 $
 #
 
 
@@ -106,3 +106,19 @@ CustomizeLayoutAction.marginWidth=Margin width:
 SWTContainerWizardPage.wizardTitle=SWT Library Options
 SWTContainerWizardPage.wizardMessage=Select additional configuration options.
 SWTContainerWizardPage.includeJFaceCheck=Include support for JFace library
+RowLayoutLayoutPage.orientationGroupTitle=Row Orientation
+RowLayoutLayoutPage.horizontalLabel=Horizontal
+RowLayoutLayoutPage.verticalLabel=Vertical
+RowLayoutLayoutPage.spacingGroupTitle=Spacing
+RowLayoutLayoutPage.spacingLabel=Spacing:
+RowLayoutLayoutPage.bottomLabel=Margin Bottom:
+RowLayoutLayoutPage.heightLabel=Margin Height:
+RowLayoutLayoutPage.leftLabel=Margin Left:
+RowLayoutLayoutPage.widthLabel=Margin Width:
+RowLayoutLayoutPage.rightLabel=Margin Right:
+RowLayoutLayoutPage.topLabel=Margin Top:
+RowLayoutLayoutPage.configGroupTitle=Row Options
+RowLayoutLayoutPage.fillLabel=Fill
+RowLayoutLayoutPage.justifyLabel=Justify
+RowLayoutLayoutPage.packLabel=Pack
+RowLayoutLayoutPage.wrapLabel=Wrap
