Using width hints on the no customization text, rather than a line break.

--- a/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
+++ b/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.cde/cde/org/eclipse/ve/internal/cde/core/messages.properties,v $
-# $Revision: 1.5 $  $Date: 2004-05-11 16:46:09 $
+# $Revision: 1.6 $  $Date: 2004-05-18 18:17:07 $
 #
 
 
@@ -19,8 +19,8 @@ CustomizeLayoutWindow.layoutTabTitle                 = Layout
 CustomizeLayoutWindow.layoutTabToolTip               = Customize layout options
 CustomizeLayoutWindow.componentTabTitle              = Component
 CustomizeLayoutWindow.componentTabToolTip            = Customize component options
-CustomizeLayoutWindow.noLayoutText                   = No layout options to customize\n on the current selection.
-CustomizeLayoutWindow.noComponentText                = No component options to customize\n on the current selection.
+CustomizeLayoutWindow.noLayoutText                   = No layout options to customize on the current selection.
+CustomizeLayoutWindow.noComponentText                = No component options to customize on the current selection.
 
 CustomizeLayoutWindowAction.label                    = Customize Layout Window
 CustomizeLayoutWindowAction.tooltip.show             = Show customize layout window
