--- a/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
+++ b/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties
@@ -10,13 +10,17 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/codegen/org/eclipse/ve/internal/java/codegen/editorpart/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-04-05 22:16:36 $
+# $Revision: 1.4 $  $Date: 2004-06-03 14:39:30 $
 #
 
 
 BeansList.DefaultPageMessage                        = Used with the Visual Editor for Java
 JavaVisualEditorPart.DesignPart                     = Design
 JavaVisualEditorPart.SourcePart                     = Source
+JavaVisualEditorPart.SetupJVE=Setup Java Visual Editor
+JavaVisualEditorPart.CleanupJVE=Cleanup visual java editor.
+JavaVisualEditorPart.CreateRemoteVMForJVE=Create Remote VM for Visual Editor for Java
+JavaVisualEditorPart.InitializingModel=Initializing model
 JVEActionContributor.Status.Creating(label)         = Create {0}
 VCEViewersDialog.Title                              = Visual Editor for Java
 VCEViewersDialog.Message                            = Additional viewers are available
@@ -61,3 +65,7 @@ JavaVisualEditor.ShowEvents                         = Show Events
 JavaVisualEditor.ExpertEvents                       = Expert Events
 FieldNameValidator.InvalidVariableName_INFO_=Invalid variable name
 FieldNameValidator.VariableNameExists_INFO_=Similar variable name exists
+JavaSourceTranslator.ShouldNotBeHere_EXC_=should not be here
+JavaSourceTranslator.LoadingFromSource=Loading model from source code
+JavaVisualEditorModelChangeController.EditorBusyAndCannotChangeNow=Editor is busy at this time and cannot be changed.
+JavaVisualEditorModelChangeController.EditorCannotBeChangedNow=Editor cannot be changed at this time.
