--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/wizard/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/wizard/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/wizard/messages.properties,v $
-# $Revision: 1.1 $  $Date: 2003-10-27 17:48:30 $
+# $Revision: 1.2 $  $Date: 2004-06-03 14:38:53 $
 #
 
 
@@ -26,3 +26,4 @@ ClasspathWizardPage.LoadPaletteExtension.Exception.Message1_EXC_ = IWAV0152E Una
 ClasspathWizardPage.LoadPaletteExtension.Exception.Message2      = The error is {0}
 ClasspathWizardPage.LoadPaletteExtension.Exception.Message3      = For more information look at the .log file in the .metadata directory
 ClasspathWizardPage.Finish.task.SettingProject                   = Setting up project
+RegisteredClasspathContainerWizardPage.Title={0}({1})
