--- a/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
+++ b/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/choosebean/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-03-17 12:23:39 $
+# $Revision: 1.4 $  $Date: 2004-06-03 14:38:53 $
 #
 
 
@@ -38,3 +38,4 @@ ChooseBeanDialog.Message.NonStaticType                   = Non static type
 SwingChooseBeanContributor.Name                          = Swing
 AllTypesChooseBeanContributor.Name                       = All Types
 AWTChooseBeanContributor.Name                            = AWT
+YesNoListChooseBeanContributor.0=Search types
