--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/core/org/eclipse/ve/internal/java/core/messages.properties,v $
-# $Revision: 1.3 $  $Date: 2004-06-02 17:52:12 $
+# $Revision: 1.4 $  $Date: 2004-06-03 14:38:53 $
 #
 
 
@@ -99,3 +99,7 @@ AddEventWizard.compositeProperty.button.2Arg.addPropertyChange(property,listener
 PropertyEventChanged.Label														  = {1} changed
 
 ToolTipAssistFactory.ToolTip_not_available_1=Round Tripping is stopped
+BasicAllocationProcesser.ThisTypeNotFoundOrInvalid_EXC_=Type of "this" was not found, or it was invalid.
+BasicAllocationProcesser.InvalidAllocationClass_EXC_=Invalid allocation class: "{0}"
+BasicAllocationProcesser.unknown_ERROR_=unknown
+BeanProxyAdapter.NoBeanInstantiatedForSomeReason_EXC_=No Bean instantiated for some reason.
