--- a/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties
+++ b/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 #
 # $Source: /home/users/m/mr/mrcompiler/VisualEditor/CVSROOT/source/org.eclipse.ve/plugins/org.eclipse.ve.java.core/vm_vcelauncher/org/eclipse/ve/internal/java/vce/launcher/remotevm/messages.properties,v $
-# $Revision: 1.2 $  $Date: 2004-05-12 15:58:26 $
+# $Revision: 1.3 $  $Date: 2004-06-03 14:39:55 $
 #
 
 
@@ -33,3 +33,5 @@ BeansLauncher.Menu.Stop                         = Stop
 BeansLauncher.Menu.Stop.Shortcut                = T
 BeansLauncher.Menu.Start                        = Start
 BeansLauncher.Menu.Start.Shortcut               = S
+JavaBeansLauncher.InvalidLauncherClass_ERROR_=Invalid launcher class {0}
+JavaBeansLauncher.ErrorCreatingLauncherClass_ERROR_=Error creating launcher class {0}: {1}
